# fortran-playground

./: .gitignore  LICENSE
busywait/: CMakeLists.txt  busywait.f90
complex-implici-none/: README.md  dotc_fake.f90  test.f90
complex-implicit-none-bug/: CMakeLists.txt
dlafortran/: CMakeLists.txt  dlaf.c  dlaf.f90  dlafnoblacs.f90  pxheevd.f90
fortran_to_c_2d/: README.md  bar.F  foo.c
fortran_to_c_char/: CMakeLists.txt  README.md  bar.F  foo.c
fortran_to_c_complex/: CMakeLists.txt  bar.f90  foo.c
pdsygst/: README.md  monitor.sh  pdsygst.f90  run.sh
scalapack-2.2.2/: CMakeLists.txt  README.md  pzpotri.f90
scalapack-2.2.2/spack/: repo.yaml
scalapack-2.2.2/spack/env/: spack.yaml
